cfi check using debug mode
Signed-off-by: jeosif <liubao6@huawei.com>
Change-Id: Iee519d292f78cbb22c889f9a53439703a94c438b

--- a/core/common/BUILD.gn
+++ b/core/common/BUILD.gn
@@ -128,7 +128,7 @@ if (defined(ohos_lite)) {
   ohos_shared_library("softbus_utils") {
     sanitize = {
       cfi = true
-      debug = false
+      debug = true
     }
     include_dirs = [
       "$dsoftbus_root_path/interfaces/kits/common",
