--- a/tests/core/common/BUILD.gn
+++ b/tests/core/common/BUILD.gn
@@ -22,6 +22,7 @@ group("unittest") {
     "dfx/hidumper_adapter/unittest:unittest",
     "dfx/hisysevent_adapter/unittest:unittest",
     "log:unittest",
+    "network:unittest",
     "security/permission/common:unittest",
     "sequence_verification:unittest",
     "utils:unittest",
