--- a/tests/sdk/transmission/trans_channel/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/BUILD.gn
@@ -349,6 +349,28 @@ if (defined(ohos_lite)) {
     }
   }
 
+  ohos_unittest("ClientTransStreamTest") {
+    module_out_path = module_output_path
+    sources = [ "udp/stream/client_trans_stream_test.cpp" ]
+    include_dirs = trans_udp_channel_sdk_inc
+    include_dirs += trans_sdk_test_common_inc
+      include_dirs += [
+        "$dsoftbus_root_path/sdk/transmission/trans_channel/udp/stream/src",
+        "$dsoftbus_root_path/sdk/transmission/ipc/standard/src",
+        "$dsoftbus_root_path/sdk/transmission/ipc/standard/include",
+        "$dsoftbus_root_path/core/frame/standard/init/include",
+      ]
+
+
+    deps = trans_sdk_test_common_deps
+    deps += trans_sdk_proxy_test_deps
+    if (is_standard_system) {
+      external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
+    } else {
+      external_deps = [ "hilog:libhilog" ]
+    }
+  }
+
   ohos_unittest("TransSdkUdpStreamAdaptorTest") {
     module_out_path = module_output_path
     sources = [ "udp/stream/stream_adaptor_test.cpp" ]
@@ -388,6 +410,7 @@ if (defined(ohos_lite)) {
           deps += [
             ":TransSdkUdpStreamAdaptorTest",
             ":TransSdkUdpStreamInterfaceTest",
+            ":ClientTransStreamTest",
             "udp/stream/libsoftbus_stream:unittest",
           ]
         }
