传输新增用例
Signed-off-by: zhangzaiyao <zhangzaiyao@huawei.com>

--- a/tests/sdk/transmission/trans_channel/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/BUILD.gn
@@ -400,6 +400,7 @@ if (defined(ohos_lite)) {
       "permission:TransDynamicPermissionTest",
       "udp/distributed_stream:distributed_stream_test",
       "udp/file:unittest",
+	  "auth:unittest",
     ]
     if (dsoftbus_feature_trans_udp == true) {
       if (dsoftbus_feature_trans_udp_stream == true) {
