--- a/tests/adapter/unittest/BUILD.gn
+++ b/tests/adapter/unittest/BUILD.gn
@@ -257,7 +257,48 @@ if (defined(ohos_lite)) {
       ]
     }
   }
-
+  ohos_unittest("AdapterWifiTest") {
+    module_out_path = module_output_path
+    sources = [
+      "$dsoftbus_root_path/adapter/common/net/wifi/common/softbus_wifi_api_adapter.c",
+      "$dsoftbus_root_path/core/common/log/softbus_log.c",
+      "$dsoftbus_root_path/tests/core/bus_center/mock_common/src/wifi_mock.cpp",
+      "softbus_wifi_api_test.cpp",
+    ]
+    include_dirs = [
+      "$dsoftbus_root_path/interfaces/kits/common",
+      "$dsoftbus_root_path/tests/core/bus_center/mock_common/src",
+      "$dsoftbus_root_path/tests/core/bus_center/mock_common/include",
+      "$dsoftbus_root_path/adapter/common/net/wifi/include",
+      "$dsoftbus_root_path/adapter/common/net/wifi/common",
+      "//foundation/communication/wifi/wifi/frameworks/native/interfaces",
+      "//foundation/communication/wifi/wifi/interfaces/kits/c",
+      "//foundation/communication/wifi/wifi/frameworks/native/include",
+      "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
+      "//foundation/communication/wifi/wifi/services/wifi_standard/wifi_framework/wifi_toolkit/net_helper",
+      "//foundation/communication/samgr/interfaces/innerkits/samgr_proxy/include",
+      "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy/include",
+      "//foundation/systemabilitymgr/samgr/adapter/interfaces/innerkits/include",
+      "$dsoftbus_root_path/core/common/include",
+    ]
+    deps = [
+      "$dsoftbus_root_path/core/common:softbus_utils",
+      "//foundation/communication/dsoftbus/adapter:softbus_adapter",
+      "//third_party/googletest:gmock",
+      "//third_party/googletest:gtest_main",
+    ]
+    if (is_standard_system) {
+      external_deps = [
+        "c_utils:utils",
+        "hiviewdfx_hilog_native:libhilog",
+      ]
+    } else {
+      external_deps = [
+        "c_utils:utils",
+        "hilog:libhilog",
+      ]
+    }
+  }
   group("unittest") {
     testonly = true
     deps = [
@@ -270,5 +311,8 @@ if (defined(ohos_lite)) {
       ":AdapterThreadTest",
       ":AdapterTimeTest",
     ]
+    if (!defined(ohos_lite) && softbus_communication_wifi_feature == true) {
+      deps += [ ":AdapterWifiTest" ]
+    }
   }
 }
