--- a/tests/adapter/unittest/BUILD.gn
+++ b/tests/adapter/unittest/BUILD.gn
@@ -299,6 +299,54 @@ if (defined(ohos_lite)) {
       ]
     }
   }
+  ohos_unittest("AdapterNetworkTest") {
+    module_out_path = module_output_path
+    sources = [
+      "$dsoftbus_root_path/adapter/common/kernel/liteos_m/softbus_adapter_mem.c",
+      "$dsoftbus_root_path/adapter/common/log/softbus_adapter_log.c",
+      "$dsoftbus_root_path/core/common/log/softbus_log.c",
+      "$dsoftbus_root_path/core/common/message_handler/message_handler.c",
+      "$dsoftbus_root_path/core/common/utils/softbus_utils.c",
+      "$dsoftbus_root_path/tests/core/bus_center/mock_common/src/network_mock.cpp",
+      "softbus_network_test.cpp",
+    ]
+    include_dirs = [
+      "$dsoftbus_root_path/adapter/default_config/spec_config",
+      "$dsoftbus_root_path/core/connection/interface",
+      "$dsoftbus_root_path/core/bus_center/interface",
+      "$dsoftbus_root_path/interfaces/kits/bus_center",
+      "$dsoftbus_root_path/adapter/common/include/OS_adapter_define/linux",
+      "$dsoftbus_root_path/adapter/default_config/spec_config",
+      "$dsoftbus_root_path/adapter/common/bus_center/include",
+      "$dsoftbus_root_path/interfaces/kits/common",
+      "$dsoftbus_root_path/tests/core/bus_center/mock_common/include",
+      "$dsoftbus_root_path/adapter/common/bus_center/network",
+      "$dsoftbus_root_path/core/bus_center/service/include",
+      "$dsoftbus_root_path/core/bus_center/utils/include/lnn_async_callback_utils.h",
+      "$dsoftbus_root_path/adapter/common/net/bluetooth/include",
+      "$dsoftbus_root_path/adapter/common/include",
+      "$dsoftbus_root_path/core/bus_center/service/include",
+      "$dsoftbus_root_path/core/bus_center/utils/include",
+      "$dsoftbus_root_path/core/bus_center/lnn/net_buscenter/include",
+      "$dsoftbus_root_path/adapter/common/include",
+      "$dsoftbus_root_path/core/common/include",
+    ]
+    deps = [
+      "//third_party/googletest:gmock",
+      "//third_party/googletest:gtest_main",
+    ]
+    if (is_standard_system) {
+      external_deps = [
+        "c_utils:utils",
+        "hiviewdfx_hilog_native:libhilog",
+      ]
+    } else {
+      external_deps = [
+        "c_utils:utils",
+        "hilog:libhilog",
+      ]
+    }
+  }
   group("unittest") {
     testonly = true
     deps = [
@@ -313,6 +361,10 @@ if (defined(ohos_lite)) {
     ]
     if (!defined(ohos_lite) && softbus_communication_wifi_feature == true) {
       deps += [ ":AdapterWifiTest" ]
+    }
+    if (!defined(ohos_lite) && dsoftbus_feature_lnn_net == true &&
+        dsoftbus_feature_conn_ble) {
+      deps += [ ":AdapterNetworkTest" ]
     }
   }
 }
