--- a/tests/core/bus_center/lnn/BUILD.gn
+++ b/tests/core/bus_center/lnn/BUILD.gn
@@ -294,6 +294,9 @@ ohos_unittest("LNNNetBuilderMockTest") {
   ]
 
   include_dirs = [
+    "$dsoftbus_root_path/core/bus_center/ipc/include",
+    "$dsoftbus_root_path/core/bus_center/ipc/standard/include",
+    "$dsoftbus_root_path/core/bus_center/ipc/standard/src",
     "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/lane_manager/include",
     "$dsoftbus_root_path/core/bus_center/lnn/net_builder/src",
     "$dsoftbus_root_path/core/bus_center/lnn/net_builder/include",
@@ -334,7 +337,6 @@ ohos_unittest("LNNNetBuilderMockTest") {
   deps = [
     "$dsoftbus_root_path/adapter:softbus_adapter",
     "$dsoftbus_root_path/core/common:softbus_utils",
-    "$dsoftbus_root_path/core/frame:softbus_server",
     "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
     "//base/security/device_auth/services:deviceauth_sdk",
     "//third_party/googletest:gmock",
